--- a/Control-De-stock-FE/src/app/pages/editar-producto/editar-producto.html
+++ b/Control-De-stock-FE/src/app/pages/editar-producto/editar-producto.html
@@ -3,34 +3,42 @@
 </div>
 
 <h1>Editar producto</h1>
-<!--<form class="formEditarProducto" [formGroup]="productoForm" (ngSubmit)="submitProductoEditado()">
+<form class="formEditarProducto" [formGroup]="productoForm" (ngSubmit)="submitProductoEditado()">
     <div class="izquierda">
         <label for="Marca">Marca</label>
         <select name="Marcas" id="Marca" formControlName="idMarca">
+            <option [ngValue]="null">Seleccione una Marca</option>
             <option *ngFor="let marca of marcas" [ngValue]="marca.idMarca">{{ marca.nombre }}</option>
         </select>
-        <button type="button" class="botonRegistrar" (click)="registrarMarca()">+</button>
         <label for="Categoria">Categoria</label>
         <select name="Categorias" id="Categoria" formControlName="idCategoria">
+            <option [ngValue]="null">Seleccione una Categoria</option>
             <option *ngFor="let categoria of categorias" [ngValue]="categoria.idCategoria">{{ categoria.nombre }}
             </option>
         </select>
         <label for="Descripcion">Descripcion</label>
         <input type="text" name="Descripcion" id="Descripcion" formControlName="descripcion" />
-    </div>
-    <div class="derecha">
         <label for="Codigo">Codigo</label>
         <input type="number" name="Codigo" id="Codigo" formControlName="codigoDeBarras" [attr.disabled]="true" />
+    </div>
+    <div class="derecha">
+        <label for="PrecioCosto">Precio de Costo</label>
+        <input type="number" name="PrecioCosto" id="PrecioCosto" placeholder="Ingrese el Precio de Costo"
+            formControlName="precioCosto" />
+        <label for="PorcentajeGanancia">Porcentaje de Ganancia</label>
+        <input type="number" name="PorcentajeGanancia" id="PorcentajeGanancia"
+            placeholder="Ingrese el Porcentaje de Ganancia" formControlName="porcentajeGanancia" />
         <label for="StockMinimo">Stock Minimo</label>
         <input type="number" name="StockMinimo" id="StockMinimo" formControlName="stockMinimo" />
         <label for="Proveedor">Proveedor</label>
         <select name="Proveedores" id="Proveedor" formControlName="idProveedor">
+            <option [ngValue]="null">Seleccione un Proveedor</option>
             <option *ngFor="let proveedor of proveedores" [ngValue]="proveedor.idProveedor">{{ proveedor.nombre }}
             </option>
         </select>
     </div>
     <div class="divBotones">
-        <button type="button" class="botonGrande" routerLink="/inicio">Cancelar</button>
-        <button type="submit" class="botonGrande" [disabled]="productoForm.invalid">Guardar</button>
+        <button type="button" routerLink="/inventario">Cancelar</button>
+        <button type="submit" [disabled]="productoForm.invalid">Guardar</button>
     </div>
-</form>-->
+</form>
