--- a/Control-De-stock-FE/src/app/pages/registrar-ingreso-producto/registrar-ingreso-producto.html
+++ b/Control-De-stock-FE/src/app/pages/registrar-ingreso-producto/registrar-ingreso-producto.html
@@ -1,21 +1,13 @@
 <div class="barraSuperior">
-  <img
-    src="imagenes/CasaBarra.png"
-    alt="Ir a la página de inicio"
-    routerLink="/inicio"
-  />
+  <img src="imagenes/CasaBarra.png" alt="Ir a la página de inicio" routerLink="/inicio" />
 </div>
 
 <h1>Ingreso de Producto</h1>
-<form class="formBusquedaProducto">
+<form class="formBusquedaProducto" formGroup="busquedaProductoForm" (ngSubmit)="submitBusquedaProducto()">
   <div class="divCodigoBusqueda">
     <label for="CodigoDeBarra">Código de Barras</label>
-    <input
-      type="number"
-      id="CodigoDeBarra"
-      placeholder="Ingrese el código"
-      class="codigoBusqueda"
-    />
+    <input type="number" id="CodigoDeBarra" placeholder="Ingrese el código" class="codigoBusqueda"
+      formControlName="codigoDeBarras" />
   </div>
   <div class="divBoton">
     <button type="submit" class="botonChico">Buscar</button>
@@ -52,18 +44,20 @@
   </div>
 </div>
 
-<table>
-  <thead>
-    <th>Código</th>
-    <th>Marca</th>
-    <th>Categoria</th>
-    <th>Descripcion</th>
-    <th>Stock</th>
-    <th>Proveedor</th>
-  </thead>
-</table>
+<form formGroup="registroIngresoForm">
+  <table>
+    <thead>
+      <th>Código</th>
+      <th>Marca</th>
+      <th>Categoria</th>
+      <th>Descripcion</th>
+      <th>Stock</th>
+      <th>Proveedor</th>
+    </thead>
+  </table>
 
-<div class="divBotones">
-  <button routerLink="/inicio">Cancelar</button>
-  <button>Confirmar</button>
-</div>
+  <div class="divBotones">
+    <button routerLink="/inicio">Cancelar</button>
+    <button>Confirmar</button>
+  </div>
+</form>
